# boris-telegram-bot

./: .gitignore  README.md  bois.py  bois_context.py  bois_runtime.py  boris_capabilities.py  boris_domain.py  boris_formatter.py  boris_gate.py  boris_identity.py  boris_llm.py  boris_memory.py  boris_protocol.py  boris_response_contract.py  boris_runtime.py  boris_templates.py  bot.py  cognitive_scaffold.py  formatter.py  handlers.py  llm.py  llm_client.py  main.py  parser.py  pyproject.toml  requirements.txt  schema.py  sima_analyzer.py  state.py  ui.py
bois/: __init__.py  gate.py  guard.py
boris/: __init__.py  engine.py  structurer.py
boris_execution/: __init__.py  core_execution_filter.py
bot/: __init__.py  handlers.py  llm_client.py  main.py  telegram_adapter.py
config/: settings.py
core/: README.md  __init__.py  orchestrator.py  registry.json  rendering.py
core_manager/: __init__.py  contract_extractor.py  core_application.py  core_context.py  core_execution_filter.py  core_flow_trace.py  core_importer.py  core_loader.py  core_validator.py  extracted_contract.py
domain/: __init__.py  engine.py
memory/: __init__.py  models.py  postgres.py  store.py
qa/: __init__.py  validator.py
runtime/: __init__.py  llm.py
scripts/: import_core.py  rollback_core.py  show_core.py  trace_core_flow.py
sima/: __init__.py  analyzer.py  engine.py
tests/: test_boris_support_runtime.py  test_bot_fsm.py  test_bot_observability.py  test_contract_extractor.py  test_core_execution_filter.py  test_core_flow_trace.py  test_core_manager.py  test_domain_engine.py  (+6 more)
(+2 files in other folders)
